--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browser-sync": "2.23.x",
     "gulp": "3.9.x",
     "gulp-csso": "^3.0.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "7.0.x",
     "gulp-rename": "^1.2.2",
@@ -21,7 +22,8 @@
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp style",
-    "start": "gulp serve"
+    "start": "gulp serve",
+    "images": "gulp images"
   },
   "browserslist": [
     "last 2 versions",
