--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-postcss": "7.0.x",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "4.0.x",
+    "gulp-webp": "^3.0.0",
     "stylelint": "9.2.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
@@ -23,7 +24,8 @@
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp style",
     "start": "gulp serve",
-    "images": "gulp images"
+    "images": "gulp images",
+    "webp": "gulp webp"
   },
   "browserslist": [
     "last 2 versions",
